# MC833

./: .gitignore  cliente_tcp.c  readme.md  servidor_udp.c  setup_project.sh
docker/: docker-compose.yml
docker/jsons/: pessoas.json
docker/mongodb-populate/: Dockerfile
entrega_projeto3/client/: Client.java
projeto1/: CMakeCache.txt  Makefile  cliente.c  cmake_install.cmake  compile_commands.json  servidor.c
projeto1/src/: cliente.c  compile_commands.json  servidor.c
projeto1/tempos/: 1c.txt  1s.txt  3c.txt  4s.txt  5c.txt  5s.txt  6c.txt  6s.txt
projeto2/: CMakeLists.txt
projeto2/src/: client  cliente.c  compile_commands.json  server  tc01.txt  tc02.txt  tc03.txt  tc04.txt  tc05.txt  tc06.txt  tc07.txt  tc08.txt  tc09.txt  tc10.txt  tc11.txt  tc12.txt  tc13.txt  tc14.txt  tc15.txt  tc16.txt  tc17.txt  tc18.txt  tc19.txt  tc20.txt  tempo_servidor_udp.txt
projeto2/src/bckp/: cliente.c  servidor.c
projeto2/tempos/: 3s.txt
projeto2_tcp/src/: client  server  servidor.c  tc01.txt  tc02.txt  tc03.txt  tc04.txt  tc05.txt  tc06.txt  tc07.txt  tc08.txt  tc09.txt  tc10.txt  tc11.txt  tc12.txt  tc13.txt  tc14.txt  tc15.txt  tc16.txt  tc17.txt  tc18.txt  tc19.txt  tc20.txt  tempo_servidor.txt
projeto2_tcp/tempos/: 4c.txt
projeto3/: .project
projeto3/cliente/: build.gradle
projeto3/servidor/: .project  build.gradle
projeto3/tempos_servidor/: 1-tratado.out  1.out  2-tratado.out  2.out  3-tratado.out  3.out  4-tratado.out  4.out  5.out  6.out  (+2 more)
projeto3_tcp/: CMakeCache.txt  Makefile  cmake_install.cmake  compile_commands.json  dadosimportantesprojeto3.tar
(+45 files in other folders)
